[gd_scene load_steps=17 format=3 uid="uid://cw4xgpqcoxxr6"]

[ext_resource type="Script" uid="uid://bfy5ychnpf3s2" path="res://Assets/Scripts/FindBox/CareManual.gd" id="1_tfqx4"]
[ext_resource type="Texture2D" uid="uid://tn4atwc63mf6" path="res://Assets/Sprites/открытый дневник бабушки.png" id="2_1mv47"]
[ext_resource type="Script" uid="uid://yxbu7vekeegj" path="res://Assets/Resources/PlateResource.gd" id="2_pdst6"]
[ext_resource type="Texture2D" uid="uid://dld61efm1wtlx" path="res://Assets/Sprites/стрелочка для книги.png" id="3_e6hu1"]
[ext_resource type="Resource" uid="uid://b2u68r8wlyy4c" path="res://Assets/Sprites/Plants/Plant_1/Plant_1.tres" id="3_qp4ki"]
[ext_resource type="Resource" uid="uid://cnw54jlm1xx4f" path="res://Assets/Sprites/Plants/Plant_2/Plant_2.tres" id="4_0t8ps"]
[ext_resource type="Texture2D" uid="uid://de17e3iq8v2jk" path="res://Assets/Sprites/крестик.png" id="5_i4usq"]
[ext_resource type="Resource" uid="uid://ccc8retawxsrb" path="res://Assets/Sprites/Plants/Plant_3/Plant_3.tres" id="5_imuxu"]
[ext_resource type="Resource" uid="uid://bmfv0yyraceee" path="res://Assets/Sprites/Plants/Plant_4/Plant_4.tres" id="6_ysdak"]
[ext_resource type="Resource" uid="uid://chbma6xr3y0kg" path="res://Assets/Sprites/Plants/Plant_5/Plant_5.tres" id="7_ecdp2"]
[ext_resource type="Resource" uid="uid://df3nl5youoy3h" path="res://Assets/Sprites/Plants/Plant_6/Plant_6.tres" id="8_u3xi6"]
[ext_resource type="Resource" uid="uid://bx538d5ydjea6" path="res://Assets/Sprites/Plants/Plant_7/Plant_7.tres" id="9_skhj7"]
[ext_resource type="Resource" uid="uid://16gs04dc6ukl" path="res://Assets/Sprites/Plants/Plant_8/Plant_8.tres" id="10_j54jv"]
[ext_resource type="Resource" uid="uid://cb8mrihu2wb45" path="res://Assets/Sprites/Plants/Plant_9/Plant_9.tres" id="11_pt782"]
[ext_resource type="Resource" uid="uid://b4ap30fuu8y71" path="res://Assets/Sprites/Plants/Plant_10/Plant_10.tres" id="12_4pn5w"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_pdst6"]

[node name="CareManual" type="Control" node_paths=PackedStringArray("first_text", "second_text")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tfqx4")
plant_description = Array[ExtResource("2_pdst6")]([ExtResource("3_qp4ki"), ExtResource("4_0t8ps"), ExtResource("5_imuxu"), ExtResource("6_ysdak"), ExtResource("7_ecdp2"), ExtResource("8_u3xi6"), ExtResource("9_skhj7"), ExtResource("10_j54jv"), ExtResource("11_pt782"), ExtResource("12_4pn5w")])
first_text = NodePath("RichTextLabel")
second_text = NodePath("RichTextLabel2")

[node name="TextureRect2" type="TextureRect" parent="."]
self_modulate = Color(0, 0, 0, 0.333333)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("PlaceholderTexture2D_pdst6")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_1mv47")
expand_mode = 3
stretch_mode = 5

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 201.0
offset_top = 51.0
offset_right = 569.0
offset_bottom = 487.0
mouse_filter = 2

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 598.0
offset_top = 51.0
offset_right = 966.0
offset_bottom = 487.0
mouse_filter = 2

[node name="Button" type="TextureButton" parent="."]
process_mode = 3
layout_mode = 0
offset_left = 880.0
offset_top = 505.0
offset_right = 1070.0
offset_bottom = 666.0
scale = Vector2(0.5, 0.5)
action_mode = 0
texture_normal = ExtResource("3_e6hu1")

[node name="Button2" type="TextureButton" parent="."]
process_mode = 3
layout_mode = 0
offset_left = 193.0
offset_top = 502.0
offset_right = 383.0
offset_bottom = 663.0
scale = Vector2(0.5, 0.5)
action_mode = 0
texture_normal = ExtResource("3_e6hu1")
flip_h = true

[node name="Button3" type="Button" parent="."]
process_mode = 3
layout_mode = 0
offset_left = 1039.0
offset_top = 25.0
offset_right = 1256.0
offset_bottom = 255.0
scale = Vector2(0.3, 0.3)
action_mode = 0
icon = ExtResource("5_i4usq")
flat = true

[connection signal="pressed" from="Button" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_close_pressed"]
